fix ckiehandler test